include_directories(
	"${CMAKE_CURRENT_SOURCE_DIR}"
	"${CMAKE_CURRENT_BINARY_DIR}"
	"${CMAKE_SOURCE_DIR}/hdr"
	"${CMAKE_BINARY_DIR}/hdr"
	"${CMAKE_BINARY_DIR}"
)

add_executable(def68k def68k.c tab68k.c)

add_custom_command(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/def68k.def
	COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/def68k.def ${CMAKE_CURRENT_BINARY_DIR}/def68k.def
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/def68k.def
)

set (DEF68K_OUTPUTS
	${CMAKE_CURRENT_BINARY_DIR}/def68k-iibs.h
	${CMAKE_CURRENT_BINARY_DIR}/def68k-funcs.h
	${CMAKE_CURRENT_BINARY_DIR}/def68k-proto.h
)

add_custom_command(
	OUTPUT ${DEF68K_OUTPUTS}
	COMMAND def68k
	DEPENDS def68k
	MAIN_DEPENDENCY ${CMAKE_CURRENT_BINARY_DIR}/def68k.def
)

add_executable(gen68k gen68k.c tab68k.c def68k-iibs.h)

set (GEN68K_OUTPUTS
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-0.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-1.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-2.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-3.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-4.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-5.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-6.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-7.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-8.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-9.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-a.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-b.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-c.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-d.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-e.c
	${CMAKE_CURRENT_BINARY_DIR}/cpu68k-f.c
)

add_custom_command(
	OUTPUT ${GEN68K_OUTPUTS}
	COMMAND gen68k
	DEPENDS gen68k
	MAIN_DEPENDENCY ${CMAKE_CURRENT_BINARY_DIR}/def68k.def
)

add_library(68k.3 STATIC ${GEN68K_OUTPUTS} ${CMAKE_CURRENT_SOURCE_DIR}/tab68k.c)
